@startuml
package Entidades {
  class Producto
  class Tienda {
    - idTienda: int
    - codigoTienda: String
    - nombreTienda: String
    - direccion: String
    - telefono: String
    - inventario: List<Producto>
  }
  class Venta {
    - idVenta: int
    - detalles: List<DetalleVenta>
  }
  class DetalleVenta {
    - idDetalleVenta: int
    - idProducto: int
    - cantidad: int
    - precioUnitario: double
  }
}

package Datos {
  class ProductoDAO
  class TiendaDAO
  class VentaDAO
  class DetalleVentaDAO
  class InventarioDAO
}

package Negocio {
  class ProductoNegocio
  class VentaNegocio
}

Tienda "1" o-- "*" Producto
Venta "1" o-- "*" DetalleVenta
VentaNegocio ..> VentaDAO
VentaNegocio ..> DetalleVentaDAO
VentaNegocio ..> InventarioDAO
VentaNegocio ..> ProductoDAO

@enduml
